--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^5.15.18",
     "@paunovic/random-words": "^1.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,8 @@
     "framer-motion": "^11.0.8",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
